--- a/web.html
+++ b/web.html
@@ -475,4 +475,13 @@
 </body>
 </html>
 
+# Clone your repo to your computer
+git clone https://github.com/your-username/my-website.git
+cd my-website
+
+# Add your website files (index.html, etc.)
+# Then run:
+git add .
+git commit -m "Add website files"
+git push
 
